Make final things final and avoid var